manifests/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`monitoring.lan`) && PathPrefix(`/`)
    services:
    - name: grafana
      port: 3000
      passHostHeader: true
